style.css
/*------------------------------------*\
  #GLOBAL
\*------------------------------------*/

html {
  scroll-behavior: smooth;
}



/* trainign wheels  */
/* 
*{
  border-style: solid;
  border-width: 1px;
  border-color: red;
} */



/*------------------------------------*\
  #TEXT-STYLES 
\*------------------------------------*/

h1, h2, h3, h4, h5, h6 { /*reset for mobile browsers */

font-weight: normal;
letter-spacing: -0.002em;
}


h1 {
  font-size: 7vw;
  line-height: 1.1;
  line-break: auto;
  font-family: 'GT-America-Extended-Regular';
  font-weight: normal;
  font-style: normal;
  color: #ffffff;
  padding-bottom: 4%;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern"1;
  font-feature-settings: "kern"1;
  white-space: nowrap;
}


@media screen and (min-width: 1440px) {
  h1{
    font-size: 7vw;
  }

  
  /* .case-study-content-image{
    display: block;
    width: 100%;
    margin-top: 5%;
    padding-left: 10%;
    padding-right: 10%;
    margin-bottom: 5%;
  } */


}


@media screen and (min-width: 2000px) {
  h1{
    font-size: 7vw;
}

.wrapping-large-text{
  font-size: 7rem;;
}

}

h2 {
  font-family: 'GT-America-Extended-Regular';
  font-weight: 400;
  color:#ffffff;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern"1;
  font-feature-settings: "kern"1;
  display: block;
  font-size: 2.5em;
  margin-block-start: 8px;
  margin-block-end: 0.83em;
  margin-inline-start: 0px;
		margin-inline-end: 0px;
		max-width: 700px;
}


h3 {
  font-size: 1.8rem;
  font-family: 'GT-America-Extended-Regular';
  color: #ffffff;
  margin-block-start: 1em;
  margin-block-end: .2em;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern"1;
  font-feature-settings: "kern"1;
}


h4{
  font-size: 1rem;
  font-family: 'GT-America-Extended-Regular';
  color: #ffffff;
  margin-block-start: 1em;
  margin-block-end: .2em;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern"1;
  font-feature-settings: "kern"1;
}

body {
  background-color: #06061C;
  padding: 0;
  margin: 0;
  font-family: 'GT-America-Standard-Regular';
  font-size: 1rem;
}


span {
  margin-bottom: 12px;
}

.spanafter {
  margin-bottom: 4px; 
}

.wrapping-large-text{
  font-size: 6rem;
  line-height: 1.1;
  line-break: auto;
  font-family: 'GT-America-Extended-Regular';
  font-weight: normal;
  font-style: normal;
  color: #ffffff;
  padding-bottom: 8%;
  padding-top: 8%;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern"1;
  font-feature-settings: "kern"1;
}

p {
  color: 042082;
  font-size: 1.5rem;
  font-family: 'GT-America-Standard-Regular';
  color: #ffffff;
		line-height: 1.9rem;
		margin-block-start: .5em;
  margin-block-end: .5em;
}

.subtext{
  font-size: 8rem;
  line-height: 1.1;
  line-break: auto;
  font-family: 'GT-America-Extended-Regular';
  font-weight: normal;
  font-style: normal;
  color: #ffffff;
  padding-bottom: 10%;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern"1;
  font-feature-settings: "kern"1;
  white-space: nowrap;
}

.white{
	color: #ffffff;
  padding-bottom: 15px;
  font-family: 'GT-America-Extended-Regular';
}


.body-copy {
    color: 042082;
    font-size: 1.5rem;
    font-family: 'GT-America-Standard-Regular';
    color: #ffffff;
    line-height: 2.2rem;
    margin-block-start: .1em;
    margin-block-end: .5em;
  }


.foliodescription {
  color: #ffffff;
  font-size: 1.1rem;
  line-height: 1.5rem;
  font-family: 'GT-America-Extended-Regular';
  margin-block-end: .1rem;
}


.foliodescription span {
  color: #ffffff;
}


.numbers {
  font-size: 1rem;
		font-family: 'GT-America-Extended-Regular';
		color: #ffffff;
  text-rendering: optimizeLegibility;
}


.subhead {
  font-size: 1.5rem;
  font-family: 'GT-America-Extended-Regular';
  color: #ffffff;
  text-decoration: none;
  border-bottom: none;
  margin-block-start: .1em;
  margin-block-end: .1em;
}


.headertext {
  color: #ffffff;
  font-family: 'GT-America-Extended-Regular';
  font-size: 1.5rem;
  line-height: 2.6rem;
}


.footer-line {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin-top: 250px;
  margin-bottom:100px;
  max-width: 1680px;
}


.NoLineLink-about {
  padding-right: 2rem;
  font-family: 'GT-America-Extended-Regular';
}


.NoLineLink-contact{
  font-family: 'GT-America-Extended-Regular';
}


.spacer-para{
	margin-bottom: 25px;
}


.centered{
  text-align: center;
  max-width: 300px;
}


header .nolinelink {
  margin-left: 4rem;
}


#contact-section a {
  margin-right: 5%;
  line-height: 2.6rem;
  font-family: 'GT-America-Extended-Regular';
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box
}

::selection {
  background: #1201F3; /* WebKit/Blink Browsers */
}
::-moz-selection {
  background: #1201F3; /* Gecko Browsers */
}









/*------------------------------------*\
  #ANIMATIONS
\*------------------------------------*/


/* make keyframes that tell the start state and the end state of our object */
@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }

.fade-in {
  opacity:0;  /* make things invisible upon start */
  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
  -moz-animation:fadeIn ease-in 1;
  animation:fadeIn ease-in 1;

  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
  -moz-animation-fill-mode:forwards;
  animation-fill-mode:forwards;

  -webkit-animation-duration:1s;
  -moz-animation-duration:1s;
  animation-duration:1s;
}


@keyframes rotateIn {
  0% { opacity: 0; transform: rotate(2deg); }
}

[data-scroll] {
  transform-origin: bottom left;
}
/* ... */

